k8s-go/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ed-team-app-go-service
  labels:
    app: ed-team-app-go
  annotations:
    description: "Reto tecnico devops ED Team - Go"
spec:
  selector:
    app: ed-team-app-go
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
