k8s-go/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ed-team-app-go-ingress
  labels:
    app: ed-team-app-go
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /go
        pathType: Prefix
        backend:
          service:
            name: ed-team-app-go-service
            port:
              number: 80
